add basic connect nxt (not working)

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
     <h2>Get Devices</h2>
     <button id="btn_get_devices">Get</button>
 
+    <h2>Connect to nxt</h2>
+    <button id="btn_connect_to_nxt">connect</button>
+
     <script src="index.js"></script>
   </body>
 </html>
