--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Lego Mindstorms NXT WebUSB Test</title>
   </head>
   <body>
     <h1>Lego Mindstorms NXT WebUSB Test</h1>
+
+    <div id="console"></div>
 
     <h2>Request Device</h2>
     <button id="btn_request_device">Request</button>
