Separated print and NXT comm functions into classes

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
     <h2>Connect to nxt</h2>
     <button id="btn_connect_to_nxt">connect</button>
 
-    <script src="index.js"></script>
+    <h2>Get firmware version</h2>
+    <button id="btn_get_firmware">Get</button>
+
+    <script type="module" src="index.js"></script>
   </body>
 </html>
