Add device info

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
     <h2>Get firmware version</h2>
     <button id="btn_get_firmware">Get</button>
 
+    <h2>Get device info</h2>
+    <button id="btn_get_device_info">Get</button>
+
     <script type="module" src="index.js"></script>
   </body>
 </html>
