Add brick set name

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,11 @@
     <h2>Get device info</h2>
     <button id="btn_get_device_info">Get</button>
 
+    <h2>Set brick name</h2>
+    <p><i>Max 15 characters</i></p>
+    <input type="text" id="input_brick_name" />
+    <button id="btn_set_brick_name">Set</button>
+
     <script type="module" src="index.js"></script>
   </body>
 </html>
